--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,17 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+
+    // 🔑 faltaban estas opciones
+    "moduleDetection": "force", 
+    "types": ["node"],
+
+    // 🔑 soporte para imports absolutos tipo "src/..."
+    "paths": {
+      "src/*": ["src/*"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
